#12 update the design of the countries detalis and edit some layout issues

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,10 +10,6 @@
   -o-transition: all 0.3s ease;
 }
 
-html {
-  font-size: calc(0.5rem + 0.5vw);
-}
-
 html,
 body,
 #root {
@@ -26,7 +22,7 @@ body,
   padding: 0;
   overflow: hidden;
   scroll-behavior: smooth;
-  font-size: calc(0.9rem + 0.1vw);
+  font-size: calc(0.75rem + 0.25vw);
   /* Vertical align all elements by default */
   vertical-align: middle;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -64,15 +60,23 @@ aside {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+article {
+  height: 100vh;
+  overflow-y: scroll;
+}
+
 .country-row {
   font-size: 2rem;
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .country-row:hover {
-  font-size: 2rem;
+  /* font-size: 1rem; */
   background-color: rgba(255, 255, 255, 0.25);
-  scale: (1.3);
+  color: black;
+  transform: scale(1.2);
   text-align: center;
+  cursor: pointer;
 }
 
 .h1-header {
@@ -80,5 +84,10 @@ aside {
 }
 
 .flag-div {
-  background-color: rgba(0, 0, 0, 0.125);
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.info-div {
+  background-color: rgba(0, 0, 0, 0.1);
+
 }
